--- a/register.html
+++ b/register.html
@@ -58,7 +58,7 @@
 		<img src="C:\Users\rachana\OneDrive\Documents\web\assign 1\logo.jpg" alt="logo" align ="left" />
 		<h1 style ="font-family:Snap ITC">ATEEZ</h1>
 		<h2> 
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\ATEEZ.html" style = "text-decoration:none">HOME&emsp; </a>
+			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\index.html" style = "text-decoration:none">HOME&emsp; </a>
 			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\login.html" style = "text-decoration:none">Login&emsp; </a>
 			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\register.html" style ="text-decoration:none">Register&emsp; </a>
 			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\contact us.html" style ="text-decoration:none">Contact us</a>
