--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
 
 <body>
 	<div class ="header">
-		<img src="C:\Users\rachana\OneDrive\Documents\web\assign 1\logo.jpg" alt="logo" align ="left" />
+		<img src="logo.jpg" alt="logo" align ="left" />
 		<h1 style ="font-family:Snap ITC">ATEEZ</h1>
 		<h2> 
 			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\#" style = "text-decoration:none">HOME&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\login.html" style = "text-decoration:none">Login&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\register.html" style ="text-decoration:none">Register&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\contact us.html" style ="text-decoration:none">Contact us</a>
+			<a href = "login.html" style = "text-decoration:none">Login&emsp; </a>
+			<a href = "register.html" style ="text-decoration:none">Register&emsp; </a>
+			<a href = "contact us.html" style ="text-decoration:none">Contact us</a>
 		</h2>
 	</div>
 	<p class = "body">
-<img src = "C:\Users\rachana\OneDrive\Documents\web\assign 1\group photo.jpg" alt = "group photo" align = "center"/> 
+<img src = "group photo.jpg" alt = "group photo" align = "center"/> 
 <br><br><br><br>
 		<b>ATEEZ (에이티즈)</b>, known pre-debut as <b>KQ Fellaz</b>, is an 8-member boy group under KQ Entertainment. The group consists of: <b>Seonghwa, Hongjoong, Yunho, Yeosang, San, Mingi, Wooyoung and Jongho.</b> They released the pre-debut song <i>‘From’</i> on July 9, 2018 with another trainee named <b>Junyoung</b>. The group debuted on October 24, 2018 with the mini-album <b><i>“Treasure Ep.1: All to Zero”</i></b> and the title songs <b>‘Pirate King’</b> and <b>‘Treasure’</b>. On July 8, 2019, ATEEZ signed with USA record label <b>RCA Records</b>. They are also signed to the Japanese record label <b>Nippon Columbia</b> since 2019.
 <br><br>
@@ -82,7 +82,7 @@ Dorm 1:</b> Seonghwa ; San ; Mingi<br>
 (all members have solo room)
 	</p>
 	<p1>
-		To know  more about them <a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\login.html" style ="color:purple">Login</a>
+		To know  more about them <a href = "login.html" style ="color:purple">Login</a>
 	</p1>
 </body>
 
