--- a/login.html
+++ b/login.html
@@ -51,13 +51,13 @@
 
 <body>
 	<div class ="header">
-		<img src="C:\Users\rachana\OneDrive\Documents\web\assign 1\logo.jpg" alt="logo" align ="left" />
+		<img src="logo.jpg" alt="logo" align ="left" />
 		<h1 style ="font-family:Snap ITC">ATEEZ</h1>
 		<h2> 
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\index.html" style = "text-decoration:none">HOME&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\login.html" style = "text-decoration:none">Login&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\register.html" style ="text-decoration:none">Register&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\contact us.html" style ="text-decoration:none">Contact us</a>
+			<a href = "index.html" style = "text-decoration:none">HOME&emsp; </a>
+			<a href = "login.html" style = "text-decoration:none">Login&emsp; </a>
+			<a href = "register.html" style ="text-decoration:none">Register&emsp; </a>
+			<a href = "contact us.html" style ="text-decoration:none">Contact us</a>
 		</h2>
 		<h3 align ="center"><b/>Login Form</h3> 
 	</div>
@@ -77,10 +77,10 @@
 				<td><input type="password" name=" " id="x1" value=""></td>
 			</tr>
 			<tr>
-			<td style="color:white"> Do not have an account: <a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\register.html" style ="text-decoration:none">Create a new account </a></td>
+			<td style="color:white"> Do not have an account: <a href = "register.html" style ="text-decoration:none">Create a new account </a></td>
 			</tr>
 			<tr>
-			<td><a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\profiles.html" style ="color:purple"><b style= "font-size:22">Submit</b> </a></td>
+			<td><a href = "profiles.html" style ="color:purple"><b style= "font-size:22">Submit</b> </a></td>
 			</tr>
 		</form>
 	</table>
