--- a/contact us.html
+++ b/contact us.html
@@ -62,17 +62,17 @@
 
 <body>
 	<div class ="header">
-		<img src="C:\Users\rachana\OneDrive\Documents\web\assign 1\logo.jpg" alt="logo" align ="left" />
+		<img src="logo.jpg" alt="logo" align ="left" />
 		<h1 style ="font-family:Snap ITC">ATEEZ</h1>
 		<h2> 
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\index.html" style = "text-decoration:none">HOME&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\login.html" style = "text-decoration:none">Login&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\register.html" style ="text-decoration:none">Register&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\contact us.html" style ="text-decoration:none">Contact us</a>
+			<a href = "index.html" style = "text-decoration:none">HOME&emsp; </a>
+			<a href = "login.html" style = "text-decoration:none">Login&emsp; </a>
+			<a href = "register.html" style ="text-decoration:none">Register&emsp; </a>
+			<a href = "contact us.html" style ="text-decoration:none">Contact us</a>
 		</h2>
 	</div>
 		<h3> Contact Us</h3>
-  		<img class="slides" src = "C:\Users\rachana\OneDrive\Documents\web\assign 1\g1.jpg" style="width:100%"><br><br><br><br>
+  		<img class="slides" src = "g1.jpg" style="width:100%"><br><br><br><br>
   		<p1 class = "para">
 			<b><i>For any corrections in page contact us :</i></b><br>
 			<b>Phone no:</b> 67543219<br>
@@ -81,7 +81,7 @@
 			<b><i>To join our fanbase:</i></b><br>
 			We conduct zoom meeting every week on saturday at 08:00 IST and 19:00 IST<br>
 			The link is given in our instagram account<br><br>
-			<img src = "C:\Users\rachana\OneDrive\Documents\web\assign 1\ins.jpg" /> : @ateez_atiny_fb<br><br>  
+			<img src = "ins.jpg" /> : @ateez_atiny_fb<br><br>  
 			Reference :<a href = "https://kprofiles.com/ateez-members-profile/" style ="text-decoration:none"> KProfiles</a>	
 	</body>
 </html>
