--- a/profiles.html
+++ b/profiles.html
@@ -54,18 +54,18 @@
 
 <body>
 	<div class ="header">
-		<img src="C:\Users\rachana\OneDrive\Documents\web\assign 1\logo.jpg" alt="logo" align ="left" />
+		<img src="logo.jpg" alt="logo" align ="left" />
 		<h1 style ="font-family:Snap ITC">ATEEZ PROFILE</h1>
 		<h2> 
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\index.html" style = "text-decoration:none">HOME&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\login.html" style = "text-decoration:none">Login&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\register.html" style ="text-decoration:none">Register&emsp; </a>
-			<a href = "C:\Users\rachana\OneDrive\Documents\web\assign 1\contact us.html" style ="text-decoration:none">Contact us</a>
+			<a href = "index.html" style = "text-decoration:none">HOME&emsp; </a>
+			<a href = "login.html" style = "text-decoration:none">Login&emsp; </a>
+			<a href = "register.html" style ="text-decoration:none">Register&emsp; </a>
+			<a href = "contact us.html" style ="text-decoration:none">Contact us</a>
 		</h2>
 	</div>
 	<p class = "body">
 		<b style="font-size:22">1. HONG JOONG</b><br>
-		<img src = "C:\Users\rachana\OneDrive\Documents\web\assign 1\hong.jpeg" alt ="Hong Joong" align ="center"/><br><br>
+		<img src = "hong.jpeg" alt ="Hong Joong" align ="center"/><br><br>
 			<b>Stage Name:</b> Hongjoong <br>
 			<b>Birth Name:</b> Kim Hong Joong<br>
 			<b>Position:</b> Captain, Main Rapper, Vocalist, Composer, Center<br>
@@ -77,7 +77,7 @@
 			<b>MBTI Type:</b> INFP-A<br></br>
 
 		<b style="font-size:22">2. SEONG HWA</b><br>
-		<img src = "C:\Users\rachana\OneDrive\Documents\web\assign 1\seong.jpeg" alt ="Seong Hwa" align ="center"/><br><br>
+		<img src = "seong.jpeg" alt ="Seong Hwa" align ="center"/><br><br>
 			<b>Stage Name:</b> Seonghwa <br>
 			<b>Birth Name:</b> Park Seong Hwa <br>
 			<b>Position:</b> Lead Dancer, Vocalist, Sub-Rapper, Visual<br>
@@ -89,7 +89,7 @@
 			<b>MBTI Type:</b> ENFJ-T (His previous result was ESFJ)<br></br>
 
 		<b style="font-size:22">3. YUNHO</b><br>
-		<img src = "C:\Users\rachana\OneDrive\Documents\web\assign 1\yun.jpeg" alt ="Yunho" align ="center"/><br><br>
+		<img src = "yun.jpeg" alt ="Yunho" align ="center"/><br><br>
 			<b>Stage Name:</b> Yunho <br>
 			<b>Birth Name:</b> Jeong Yun Ho <br>
 			<b>Position:</b> Main Dancer, Vocalist, Visual<br>
@@ -101,7 +101,7 @@
 			<b>MBTI Type:</b> ENFJ-A<br></br>
 
 		<b style="font-size:22">4. YEOSANG</b><br>
-		<img src = "C:\Users\rachana\OneDrive\Documents\web\assign 1\yeo.jpeg" alt ="Yeosang" align ="center"/><br><br>
+		<img src = "yeo.jpeg" alt ="Yeosang" align ="center"/><br><br>
 			<b>Stage Name:</b> Yeosang <br>
 			<b>Birth Name:</b> Kang Yeo Sang <br>
 			<b>Position:</b> Lead Dancer, Vocalist, Visual<br>
@@ -113,7 +113,7 @@
 			<b>MBTI Type:</b> ISFP-T (His previous result was ISFJ)<br></br>
 
 		<b style="font-size:22">5. SAN</b><br>
-		<img src = "C:\Users\rachana\OneDrive\Documents\web\assign 1\san.jpeg" alt ="San" align ="center"/><br><br>
+		<img src = "san.jpeg" alt ="San" align ="center"/><br><br>
 			<b>Stage Name:</b> San <br>
 			<b>Birth Name:</b> Choi San <br>
 			<b>Position:</b> Lead Vocalist, Main Dancer<br>
@@ -125,7 +125,7 @@
 			<b>MBTI Type:</b> INFP-T <br></br>
 
 		<b style="font-size:22">6. MIN GI</b><br>
-		<img src = "C:\Users\rachana\OneDrive\Documents\web\assign 1\min.jpeg" alt ="Min Gi" align ="center"/><br><br>
+		<img src = "min.jpeg" alt ="Min Gi" align ="center"/><br><br>
 			<b>Stage Name:</b> Min Gi<br>
 			<b>Birth Name:</b> Song Min Gi  <br>
 			<b>Position:</b> Main Dancer, Main Rapper<br>
@@ -137,7 +137,7 @@
 			<b>MBTI Type:</b> ENTP-T <br></br>
 		
 		<b style="font-size:22">7. WOOYOUNG</b><br>
-		<img src = "C:\Users\rachana\OneDrive\Documents\web\assign 1\woo.jpeg" alt ="Wooyoung" align ="center"/><br><br>
+		<img src = "woo.jpeg" alt ="Wooyoung" align ="center"/><br><br>
 			<b>Stage Name:</b> Wooyoung<br>
 			<b>Birth Name:</b> Jung Wooyoung  <br>
 			<b>Position:</b> Main Dancer, Vocalist, Visual<br>
@@ -149,7 +149,7 @@
 			<b>MBTI Type:</b> ISFJ-T (His previous results were ENFJ-T and ESFJ twice)<br></br>
 
 		<b style="font-size:22">8. JONGHO</b><br>
-		<img src = "C:\Users\rachana\OneDrive\Documents\web\assign 1\jong.jpeg" alt ="Jong Ho" align ="center"/><br><br>
+		<img src = "jong.jpeg" alt ="Jong Ho" align ="center"/><br><br>
 			<b>Stage Name:</b> Jongho<br>
 			<b>Birth Name:</b> Choi Jong Ho  <br>
 			<b>Position:</b> Main Vocalist, Maknae<br>
